--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
+    "@supabase/supabase-js": "^2.97.0",
     "iconsax-react": "^0.0.8",
     "isbot": "^5.1.31",
     "react": "^19.2.4",
