--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.2",
+    "@react-router/fs-routes": "^7.13.0",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
     "@supabase/supabase-js": "^2.97.0",
